--- a/style/style.css
+++ b/style/style.css
@@ -2227,7 +2227,9 @@ input[type=textarea] {
     margin: auto;
     width: auto
 }
-
+.preFooterInner a:hover{
+  background: #2b2b2b;
+}
 .preFooterBlocks {
     padding-top: 8em;
     padding-bottom: 5em;
